crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__lists_tables__render_list_with_bold.snap
---
source: crates/ferromark_renderer/src/html/tests/lists_tables.rs
expression: html
---
<ul>
<li><strong>bold</strong> text</li>
</ul>
