crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__lists_tables__render_nested_list.snap
---
source: crates/ferromark_renderer/src/html/tests/lists_tables.rs
expression: html
---
<ul>
<li>item 1
<ul>
<li>sub 1</li>
</ul>
</li>
<li>item 2</li>
</ul>
