crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__lists_tables__render_table.snap
---
source: crates/ferromark_renderer/src/html/tests/lists_tables.rs
expression: html
---
<table>
<thead>
<tr>
<th>head</th>
</tr>
</thead>
<tbody>
<tr>
<td>body</td>
</tr>
</tbody>
</table>
