crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__lists_tables__render_task_list.snap
---
source: crates/ferromark_renderer/src/html/tests/lists_tables.rs
expression: html
---
<ul>
<li><input type="checkbox" checked disabled> task 1</li>
<li><input type="checkbox" disabled> task 2</li>
</ul>
